Added JO exercises to chapter 1

--- a/forallx-adl-what.tex
+++ b/forallx-adl-what.tex
@@ -57,11 +57,14 @@ But in analysing an argument, there is no substitute for a good nose.
 	\item The premises are supposed to support the conclusion, though whether they do so is another matter.
 }
 
-  
+
 
 \practiceproblems
 At the end of some sections, there are problems that review and explore the material covered in the chapter. There is no substitute for actually working through some problems, because logic is more about a way of thinking than it is about memorising facts.\\[12pt]
 
+\problempart What is the difference between argument in the everyday sense, and in the logicians’sense? What is the point of logical arguments?
+
+\problempart 
 Highlight the phrase which expresses the conclusion of each of these arguments:
 \begin{earg}
 	\item It is sunny. So I should take my sunglasses.
@@ -137,7 +140,7 @@ The crucial thing about a conclusive argument is that it is impossible, in a ver
 The conclusion of this argument is ridiculous. Nevertheless, it follows from the premises. \emph{If} both premises were true, \emph{then} the conclusion just has to be true. So the argument is conclusive.
 
 Why is this argument conclusive? The primary reason for any argument to be conclusive is this:
-\factoidbox{The \define{structure} of the argument – the grammatical form of the premises and conclusion – ensures that the premises support the conclusion.} In the present case, one premise says that oranges are in one of two categories; the other premise says that oranges are not in the first category. We conclude that they are in the second category. The premises and conclusion are about oranges. But it is plausible to think that any argument with this structure must be conclusive, whether we are talking about oranges, or cars, or anything really.\footnote{There is in fact another reason for thinking this argument is conclusive. One might think it is \emph{essential} to an orange that it be a fruit – many will say that \emph{being a fruit} is part of what it is to be an orange.  So `Oranges are not fruits' is not only false: it is impossible for it to be true. But in that case it is not possible for the premises to be true. And it is therefore not possible for premises to be true \emph{while} the conclusion is false. And hence the argument is conclusive. 
+\factoidbox{The \define{structure} of the argument – the grammatical form of the premises and conclusion – ensures that the premises support the conclusion.} In the present case, one premise says that oranges are in one of two categories; the other premise says that oranges are not in the first category. We conclude that they are in the second category. The premises and conclusion are about oranges. But it is plausible to think that any argument with this structure must be conclusive, whether we are talking about oranges, or cars, or anything really.\footnote{There is in fact another reason for thinking this argument is conclusive. One might think it is \emph{essential} to an orange that it be a fruit – many will say that \emph{being a fruit} is part of what it is to be an orange. So `Oranges are not fruits' is not only false: it is impossible for it to be true. But in that case it is not possible for the premises to be true. And it is therefore not possible for premises to be true \emph{while} the conclusion is false. And hence the argument is conclusive. 
 
 Indeed, it would remain conclusive \emph{no matter what} the conclusion was! So this is a weird kind of case, with an impossible premise. But nothing much really turns on it, and it is simpler to simply count it as conclusive than to try and separate out such `degenerate' cases of conclusive arguments. See also §\ref{s:neccandcont}.}
 
@@ -148,7 +151,7 @@ There are plenty of arguments that are conclusive, but not for reasons relating 
 		\item[] Juanita is a vixen.
 		\item[So:] Juanita is a fox.
 	\end{earg}
-It is impossible for the premise to be true and the conclusion false. So the argument is conclusive. But this is not due to the structure of the argument. Here is an inconclusive argument with seemingly the same structure or form. The new argument is the result of replacing the word `fox'  in the first argument with the word `cathedral', but keeping the overall grammatical structure the same:
+It is impossible for the premise to be true and the conclusion false. So the argument is conclusive. But this is not due to the structure of the argument. Here is an inconclusive argument with seemingly the same structure or form. The new argument is the result of replacing the word `fox' in the first argument with the word `cathedral', but keeping the overall grammatical structure the same:
 	\begin{earg}
 		\item[] Juanita is a vixen.
 		\item[So:] Juanita is a cathedral.
@@ -170,7 +173,7 @@ The argument is inconclusive, since it is possible to be green all over and shin
 
 Logicians try to steer clear of controversial matters like whether there is a definition of an orange that requires it to be a fruit, or whether there is a `connection in meaning' between being green and not being red. It is often difficult to figure such things out from the armchair (a logician's preferred habitat), and there may be widespread disagreement even among subject matter experts.
 
-So logicians tend not to focus on conclusive arguments in general, but rather on those conclusive arguments which have a good  structure or form.\footnote{It can be very hard to tell whether an invalid argument is conclusive or inconclusive. Consider the argument `The sea is full of water; so the sea is full of H\textsubscript{2}O'. This is conclusive, since water just is the same stuff as H\textsubscript{2}O. The sea cannot be full of that water stuff without being full of that exact same stuff, namely, H\textsubscript{2}O stuff. But it took a lot of chemistry and ingenious experiments to figure out that water is H\textsubscript{2}O. So it was not at all obvious that this argument was conclusive. On the other hand, it is generally very clear when an argument is conclusive due to its structure – you can just see the structure when the argument is presented to you.}  This is why the logic we are studying is sometimes called \define{formal logic}. We introduce a special term for the class of arguments logicians are especially interested in:
+So logicians tend not to focus on conclusive arguments in general, but rather on those conclusive arguments which have a good structure or form.\footnote{It can be very hard to tell whether an invalid argument is conclusive or inconclusive. Consider the argument `The sea is full of water; so the sea is full of H\textsubscript{2}O'. This is conclusive, since water just is the same stuff as H\textsubscript{2}O. The sea cannot be full of that water stuff without being full of that exact same stuff, namely, H\textsubscript{2}O stuff. But it took a lot of chemistry and ingenious experiments to figure out that water is H\textsubscript{2}O. So it was not at all obvious that this argument was conclusive. On the other hand, it is generally very clear when an argument is conclusive due to its structure – you can just see the structure when the argument is presented to you.} This is why the logic we are studying is sometimes called \define{formal logic}. We introduce a special term for the class of arguments logicians are especially interested in:
 \factoidbox{
 	An argument is \define{valid} if, and only if, it is conclusive due to its structure; otherwise it is \define{invalid}.
 }
@@ -251,6 +254,9 @@ Some arguments which are conclusive but invalid can be turned into valid argumen
 
 \practiceproblems
 \problempart
+What is a \emph{conclusive} argument? What, in addition to being conclusive, is required for an argument to be \emph{valid}? What, in addition to being valid, is required for an argument to be \emph{sound}?
+
+\problempart
 Which of the following arguments are valid? Which are invalid but conclusive? Which are inconclusive? Comment on any difficulties or points of interest.
 
 \begin{earg}
@@ -324,7 +330,7 @@ So many kinds of English sentence cannot be used to express premises or conclusi
 	\end{itemize}
 The common feature of these three kinds of sentence is that they cannot be used to make \emph{assertions}: they cannot be true or false. It does not even make sense to ask whether a \emph{question} is true (it only makes sense to ask whether the \emph{answer} to a question is true).
 
-The general point is that the premises and conclusion of an argument must  be \define{declarative sentences}, capable of having a \define{truth value}. And the two truth values that concern us are just True and False. We need not know what the truth value of a sentence is for it to form part of an argument, but it must have the kind of grammatical structure that permits it to have a truth value.
+The general point is that the premises and conclusion of an argument must be \define{declarative sentences}, capable of having a \define{truth value}. And the two truth values that concern us are just True and False. We need not know what the truth value of a sentence is for it to form part of an argument, but it must have the kind of grammatical structure that permits it to have a truth value.
 
 
 \section{Consistency}
@@ -376,17 +382,27 @@ Equally, you do not need to check the weather, or even the meaning of words, to 
 
 A sentence which is capable of being true or false, but which says something which is neither necessarily true nor necessarily false, is \define{contingent}.
 
-If a sentence says something which is sometimes true and sometimes false, it will definitely be contingent. But something might \emph{always} be true and still be contingent. For instance, it seems plausible that whenever there have been people, some of them habitually arrive late. `Some people are habitually late' is always true. But it is contingent, it seems: human nature could have been  more punctual. If so, the sentence would have been false. But if something is really necessary, it will always be true.\footnote{Here's an interesting example to consider. It seems that, whenever anyone says the sentence `I am here now', they say something true. That sentence is, whenever it is uttered, \emph{truly uttered}. But does it say something necessary or contingent?}
+If a sentence says something which is sometimes true and sometimes false, it will definitely be contingent. But something might \emph{always} be true and still be contingent. For instance, it seems plausible that whenever there have been people, some of them habitually arrive late. `Some people are habitually late' is always true. But it is contingent, it seems: human nature could have been more punctual. If so, the sentence would have been false. But if something is really necessary, it will always be true.\footnote{Here's an interesting example to consider. It seems that, whenever anyone says the sentence `I am here now', they say something true. That sentence is, whenever it is uttered, \emph{truly uttered}. But does it say something necessary or contingent?}
 
 
-If some sentences contain amongst themselves a necessary falsehood, those sentences are jointly inconsistent. At least one of them cannot be true, so they cannot all be true together. Accordingly, if an argument has a premise that is a necessary falsehood, or its conclusion is a necessary truth, or both, then the argument is conclusive – its premises and the denial of its conclusion will be jointly inconsistent.  
+If some sentences contain amongst themselves a necessary falsehood, those sentences are jointly inconsistent. At least one of them cannot be true, so they cannot all be true together. Accordingly, if an argument has a premise that is a necessary falsehood, or its conclusion is a necessary truth, or both, then the argument is conclusive – its premises and the denial of its conclusion will be jointly inconsistent. 
 
 \keyideas{\item Arguments are made up of declarative sentences, all of which are either true or false.
-\item Some declarative sentences are formally consistent if, and only if, their structures don't rule out the possibility that they are all true  together.
+\item Some declarative sentences are formally consistent if, and only if, their structures don't rule out the possibility that they are all true together.
 \item Some declarative sentences can only have one truth value – they are either necessary or impossible. Others are contingent, having one truth value in some circumstances and the other truth value in other circumstances.}
 
 
 \practiceproblems
+\problempart Which of the following sentences are capable of being true or false?
+\begin{earg}
+	\item Earth is the third planet from the Sun.
+	\item Pluto is the ninth planet from the Sun.
+	\item Have you been feeding the lions?
+	\item Socrates said, `Be as you wish to seem'.
+	\item `Have you been feeding the lions?' is a sentence.
+	\item Always forgive your enemies; nothing annoys them so much.
+\end{earg}
+
 \problempart
 \label{pr.EnglishTautology}
 For each of the following: Is it necessarily true, necessarily false, or contingent?
