--- a/forallx-adl-fol.tex
+++ b/forallx-adl-fol.tex
@@ -40,7 +40,7 @@ In English, a \define{singular term} is a word or phrase that refers to a \emph{
 \define{Proper names} are a particularly important kind of singular term. These are expressions that pick out individuals without describing them. The name `Emerson' is a proper name, and the name alone does not tell you anything about Emerson. Of course, some names are traditionally given to boys and other are traditionally given to girls. If `Hilary' is used as a singular term, you might guess that it refers to a woman. You might, though, be guessing wrongly. Indeed, the name does not necessarily mean that what is referred to is even a person: Hilary might be a giraffe, for all you could tell just from the name. 
 
 In \FOL, our \define{names} are lower-case letters `$a$' through to `$r$'. We can add subscripts if we want to use some letter more than once. So here are some names in \FOL:
-	\[a,b,c,…, r, a_1, f_{32}, j_{390}, m_{12}.\]
+	\[a,b,c,…, r, a_{1}, f_{32}, j_{390}, m_{12}.\]
 These should be thought of along the lines of proper names in English. But with some differences. First, `Antony Eagle' is a proper name, but there are a number of people with this name. (Equally, there are at least two people with the name `P.D.\ Magnus' and several people named `Tim Button'.) We live with this kind of ambiguity in English, allowing context to determine that some particular utterance of the name `Antony Eagle' refers to one of the contributors to this book, and not some other guy. In \FOL, we do not tolerate any such ambiguity. Each name must pick out \emph{exactly} one thing. (However, two different names may pick out the same thing.)  Second, names (and predicates) in \FOL\ are assigned their meaning, or \emph{interpreted}, only temporarily. (This is just like the way that atomic sentences are only assigned a truth value in \TFL\ temporarily, relative to a valuation.)
 
 As with \TFL, we can provide symbolisation keys. These indicate, temporarily, what a name shall pick out. So we might offer:
@@ -426,7 +426,7 @@ Here are the syllogistic figures identified by Aristotle and his successors, alo
 \end{itemize}
 Symbolise each argument in \FOL.
 
-\
+
 
 \problempart
 \label{pr.FOLvegetarians}
@@ -482,9 +482,9 @@ symbolise each of the following sentences in \FOL:
 
 \problempart
 \label{pr.FOLarguments}
-For each argument, write a symbolisation key and symbolise the argument in \FOL.
+For each argument, write a symbolisation key and symbolise the argument in \FOL. In each case, try to decide if the argument you have symbolized is valid.
 \begin{earg}
-\item Willard is a logician. All logicians wear funny hats. So Willard wears a funny hat
+\item Willard is a logician. All logicians wear funny hats. So Willard wears a funny hat.
 \item Nothing on my desk escapes my attention. There is a computer on my desk. As such, there is a computer that does not escape my attention.
 \item All my dreams are black and white. Old TV shows are in black and white. Therefore, some of my dreams are old TV shows.
 \item Neither Holmes nor Watson has been to Australia. A person could see a kangaroo only if they had been to Australia or to a zoo. Although Watson has not seen a kangaroo, Holmes has. Therefore, Holmes has been to a zoo.
@@ -780,6 +780,14 @@ symbolise the following arguments in \FOL:
 \item Every woman who dances ballet is the child of someone who dances ballet.
 \end{earg}
 
+\problempart
+Consider the following symbolisation key:
+\begin{ekey}
+\item[\text{domain}] Fred, Amy, Kuiping
+\item[P\meta{xy}] \gap{x} pats \gap{y} on the head.
+\item[T\meta{xy}] \gap{x} is taller than \gap{y}.
+\end{ekey}
+If we hold fixed this assignment of meanings to the predicates, why is it possible that `$\exists x \forall y Pxy$' is true, but not possible that  `$\exists x \forall y Txy$' is true?
 
 \chapter{Identity}
 \label{sec.identity}
@@ -847,7 +855,7 @@ Now sentence \ref{else2} can be symbolised as `$p=c$'. This means that $p$ is $c
 
 We can also now deal with sentences \ref{else1b}–\ref{else1d}. All of these sentences can be  paraphrased as `Everyone who isn't Pavel is such that: Pavel owes money to them'. Paraphrasing some more, we get: `For all x, if x is not Pavel, then x is owed money by Pavel'. Now that we are armed with our new identity symbol, we can symbolise this as `$\forall x (\enot x = p \eif Opx)$'.
 
-This last sentence contains the formula `$\enot x = p$'. And that might look a bit strange, because the symbol that comes immediately after the `$\enot$' is a variable, rather than a predicate. But this is no problem. We are simply negating the entire formula, `$x = p$'. But if this is confusing, you may use this official abbreviation: `$\meta{x}≠\meta{y}$' is the same expression as `$\enot \meta{x} = \meta{y}$'. I will use both expressions in what follows, but strictly speaking only the latter is officially permitted.
+This last sentence contains the formula `$\enot x = p$'. And that might look a bit strange, because the symbol that comes immediately after the `$\enot$' is a variable, rather than a predicate. But this is no problem. We are simply negating the entire formula, `$x = p$'. But if this is confusing, you may use  the \define{non-identity relation} `$≠$'. This is an abbreviation, characterised as folllows: \factoidbox{Any occurrence of the expression `$\meta{x}≠\meta{y}$' in a sentence abbreviates the expression `$\enot \meta{x} = \meta{y}$', and either can substitute for the other in any \FOL\ sentence.} I will use both expressions in what follows, but strictly speaking `$\enot a = b$' is officially part of the language, though it can also be represented by `$a≠b$'.
 
 In addition to sentences that use the word `else', `other than' and `except', identity will be helpful when symbolising some sentences that contain the words `besides' and `only.' Consider these examples:
 
@@ -1121,7 +1129,22 @@ symbolise the following sentences in \FOL:
 \end{earg}
 
 
-\solutions
+\problempart
+Using the following symbolisation key:
+\begin{ekey}
+\item[\text{domain}] animals
+\item[𝐶\meta{x}] \gap{x} is a cat.
+\item[G\meta{xy}] \gap{x} is grumpier than \gap{y}.
+\item[f] Felix 
+\item[g] Sylvester
+symbolise each of the following in \FOL:
+\begin{earg}
+\item  Some animals are grumpier than cats.
+\item Some cat is grumpier than every other cat.
+\item Sylvester is the grumpiest cat.
+\item Of all the cats, Felix is the least grumpy.
+\end{earg}
+
 \problempart
 \label{pr.FOLcards}
 Using the following symbolisation key:
@@ -1220,14 +1243,14 @@ There are six kinds of symbols in \FOL:
 \begin{center}
 \begin{tabular}{l l} \toprule 
 Predicate symbols & $A,B,C,…,Z$\\
-with subscripts, as needed & $A_1, B_1,Z_1,A_2,A_{25},J_{375},…$\\
+with subscripts, as needed & $A_{1}, B_{1},Z_{1},A_{2},A_{25},J_{375},…$\\
 and the identity symbol &  $=$.
 \\
 Names & $a,b,c,…, r$\\
-with subscripts, as needed & $a_1, b_{224}, h_7, m_{32},…$\\
+with subscripts, as needed & $a_{1}, b_{224}, h_7, m_{32},…$\\
 \\
 Variables & $s, t, u, v, w, x,y,z$\\
-with subscripts, as needed & $x_1, y_1, z_1, x_2,…$\\
+with subscripts, as needed & $x_{1}, y_{1}, z_{1}, x_{2},…$\\
 \\
 Connectives, of two types & \\
 Truth-functional Connectives & $\enot,\eand,\eor,\eif,\eiff$\\
@@ -1245,16 +1268,16 @@ We start by defining the notion of a term.
 	\factoidbox{
 		A \define{term} is any name or any variable. }
 So, here are some terms:
-	$$a, b, x, x_1 x_2, y, y_{254}, z$$
+	$$a, b, x, x_{1} x_{2}, y, y_{254}, z$$
 We next need to define \define{atomic formulae}.
 	\factoidbox{
 		\begin{enumerate}
-		\item If $\meta{R}$ is any predicate other than the identity predicate `$=$', and we have 0 or more terms $\meta{t}_1, \meta{t}_2, …, \meta{t_n}$ (not necessarily distinct from one another), then $\meta{R t}_1 \meta{t}_2 … \meta{t}_n$ is an atomic formula. 
-		\item If $\meta{t}_1$ and $\meta{t}_2$ are terms, then $\meta{t}_1 = \meta{t}_2$ is an atomic formula.
+		\item If $\meta{R}$ is any predicate other than the identity predicate `$=$', and we have 0 or more terms $\meta{t}_{1}, \meta{t}_{2}, …, \meta{t_n}$ (not necessarily distinct from one another), then $\meta{R t}_{1} \meta{t}_{2} … \meta{t}_n$ is an atomic formula. 
+		\item If $\meta{t}_{1}$ and $\meta{t}_{2}$ are terms, then $\meta{t}_{1} = \meta{t}_{2}$ is an atomic formula.
 		\item Nothing else is an atomic formula.
 		\end{enumerate}
 	}
-The use of script fonts here follows the conventions laid down in §\ref{s:UseMention}. So, `$\meta{R}$' is not itself a predicate of \FOL. Rather, it is a symbol of our metalanguage (augmented English) that we use to talk about any predicate of \FOL. Similarly, `$\meta{t}_1$' is not a term of \FOL, but a symbol of the metalanguage that we can use to talk about any term of \FOL. So here are some atomic formulae:
+The use of script fonts here follows the conventions laid down in §\ref{s:UseMention}. So, `$\meta{R}$' is not itself a predicate of \FOL. Rather, it is a symbol of our metalanguage (augmented English) that we use to talk about any predicate of \FOL. Similarly, `$\meta{t}_{1}$' is not a term of \FOL, but a symbol of the metalanguage that we can use to talk about any term of \FOL. So here are some atomic formulae:
 	\begin{center}
 		$x = a$\\
 		$a = b$\\
@@ -1262,7 +1285,7 @@ The use of script fonts here follows the conventions laid down in §\ref{s:UseMe
 		$Fa$\\
 		$Gxay$\\
 		$Gaaa$\\
-		$Sx_1 x_2 a b y x_1$\\
+		$Sx_{1} x_{2} a b y x_{1}$\\
 		$Sby_{254} z a a z$\\
 	\end{center}
 Remember that we allow $0$-place predicates too, to ensure that sentence letters of \TFL\ are grammatical expressions of \FOL\ too. According to the definition, any predicate symbol followed by no terms at all is also an atomic formula of \FOL. So `$Q$' by itself is an acceptable atomic formula.
@@ -1360,13 +1383,13 @@ Third, we may omit brackets between each pair of disjuncts when writing long ser
 \practiceproblems
 \problempart
 \label{pr.freeFOL}
-Identify which variables are bound and which are free.
+Identify which variables are bound and which are free. Are any of these expressions formulas of \FOL? Are any of them sentences? Explain your answers.
 \begin{earg}
-\item $\exists x Lxy \eand \forall y Lyx$
-\item $\forall x Ax \eand Bx$
-\item $\forall x (Ax \eand Bx) \eand \forall y(Cx \eand Dy)$
-\item $\forall x\exists y\bigl(Rxy \eif (Jz \eand Kx) \bigr) \eor Ryx$
-\item $\forall x_1(Mx_2 \eiff Lx_2x_1) \eand \exists x_2 Lx_3x_2$
+\item $\exists x (Lxy \eand \forall y Lyx)$
+\item $(\forall x Ax \eand Bx)$
+\item $(\forall x (Ax \eand Bx) \eand \forall y(Cx \eand Dy))$
+\item $(\forall x\exists y\bigl(Rxy \eif (Jz \eand Kx) \bigr) \eor Ryx)$
+\item $(\forall x_{1}(Mx_{2} \eiff Lx_{2}x_{1}) \eand \exists x_{2} Lx_{3}x_{2})$
 \end{earg}
 
 \problempart
@@ -1378,7 +1401,8 @@ Identify which of the following are (a) expressions of \FOL; (b) formulae of \FO
 	\item $(Fx \to \forall x (Gx \wedge Fx))$; % formula
 	\item $(\forall x (Gx \wedge Fx) \to Fx)$; % formula
 	\item $(P \wedge (\forall x (Fx \vee P)))$; % expression
-	\item $(P \wedge \forall x(Fx \vee P))$. % sentence
+	\item $(P \wedge \forall x(Fx \vee P))$; % sentence
+	\item $\forall x (Px \eand \exists y (x ≠ y))$. % expression
 \end{earg}
 
 
