--- a/forallx-adl-fol.tex
+++ b/forallx-adl-fol.tex
@@ -1137,6 +1137,7 @@ Using the following symbolisation key:
 \item[G\meta{xy}] \gap{x} is grumpier than \gap{y}.
 \item[f] Felix 
 \item[g] Sylvester
+\end{ekey}
 symbolise each of the following in \FOL:
 \begin{earg}
 \item  Some animals are grumpier than cats.
@@ -1174,7 +1175,6 @@ symbolise each sentence in \FOL:
 \item The deuce of clubs is not the man with the axe.
 \end{earg}
 
-\
 
 \problempart Using the following symbolisation key:
 \begin{ekey}
